src/core-crm/objects/List_Contributor__c/List_Contributor__c.object-meta.xml
<CustomObject>
    <description>List Contributor contains information about the staff members who contributed to compiling a list of contacts.</description>
    <label>List Contributor</label>
    <nameField>
        <displayFormat>LC-{000000}</displayFormat>
        <label>List Contributor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Contributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>