src/core-crm/objects/List_Contributor__c/fields/Contributor_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Criteria__c</fullName>
    <description>The individual contributor&apos;s criteria or rationale for including the Contact in the list.</description>
    <inlineHelpText>The individual contributor&apos;s criteria or rationale for including the Contact in the list.</inlineHelpText>
    <label>Contributor Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>