src/core-crm/objects/List_Contributor__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the Contributor is actively contributing to the list or not.</description>
    <inlineHelpText>Identifies if the Contributor is actively contributing to the list or not.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>