src/core-crm/objects/List_Contributor__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the List record.</description>
    <label>List</label>
    <referenceTo>List__c</referenceTo>
    <relationshipLabel>List Contributors</relationshipLabel>
    <relationshipName>List_Contributors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>