src/core-crm/objects/List_Contributor__c/fields/List_Contributor__c.field-meta.xml
<CustomField>
    <fullName>List_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The DEP User who is contributing to the list.</description>
    <inlineHelpText>The DEP User who is contributing to the list.</inlineHelpText>
    <label>List Contributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>List_Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>