src/core-crm/objects/List_Contributor__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <description>Migrated Data External Key</description>
    <externalId>true</externalId>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique> 
</CustomField>