src/core-crm/objects/List_Contributor__c/fields/Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Date__c</fullName>
    <description>The date the contributor must finalise their contribution to the list.</description>
    <inlineHelpText>The date the contributor must finalise their contribution to the list.</inlineHelpText>
    <label>Task Due Date</label>
    <type>Date</type>
</CustomField>