src/core-crm/objects/List_Contributor__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <description>The contributor’s status of list member review/curation process.</description>
    <inlineHelpText>The contributor’s status of their list member review/curation process.</inlineHelpText>
    <label>Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>